# beep-data-utils

./: .gitignore  README.md  pyproject.toml  requirements.txt
data_analysis/: dataset_exploration.ipynb
data_analysis/Baseline models/: discharge_model.ipynb  full_model.ipynb  variance_model.ipynb
src/beep_data_utils/: __init__.py  configuration.py
src/beep_data_utils/cli/: __init__.py  add_cell_keys_to_in_and_out_of_domain.py  add_targets_to_taget_file.py  beep_dataset_creation_cli.py  beep_dataset_creation_seconday_dataset_cli.py  dataset_preparation_cli.py  head_training_and_evaluation.py  hf_head_training.py  nca_ncm_data_preparation.py  nickel_dataset_preparation.py  time_enforcing_rf_training.py
src/beep_data_utils/data/: beep_dataset_preparation.py  core.py  handler.py  handler_cycle_based_averaging.py  preprocessor.py
src/beep_data_utils/modeling/: __init__.py
src/beep_data_utils/modeling/heads/: __init__.py  hf_heads.py  hf_utils.py  registries.py
src/beep_data_utils/resources/: beep-eval.csv  beep-test.csv  beep-train.csv  beep_dataset.csv  control_variables.txt  in_domain.txt  out_of_domain.txt  targets.csv  test_secondary_beep_dataset_small.csv  third_dataset.csv  train_secondary_beep_dataset_small.csv
src/beep_data_utils/scripts/: add_cell_key_to_in_and_out_of_domain_files.sh  beep_dataset_creation.sh  beep_secondary_dataset_creation.sh  create_nickel_dataset_preparation.sh  extract_targets.sh  head_optimization_script.sh  head_training_and_eval.sh  nca_ncm_dataset_preparation.sh  preprocessing.sh
tests/: __init__.py  test_beep_data_preparation.py  test_beep_handler.py  test_modeling_hf_training.py  test_modeling_hf_utils.py
